Fixing IPv6 addressing logic

--- a/nokia-sr-mpls/configs/lab1-ipaddr/CSC1-P3.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/CSC1-P3.partial.cfg
@@ -67,7 +67,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:64::11 {
+                address 2001:db8:64::a {
                     prefix-length 126
                 }
             }
@@ -83,7 +83,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:64::17 {
+                address 2001:db8:64::11 {
                     prefix-length 126
                 }
             }
