--- a/nokia-sr-mpls/configs/lab1-ipaddr/CSC1-P4.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/CSC1-P4.partial.cfg
@@ -67,7 +67,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:64::15 {
+                address 2001:db8:64::e {
                     prefix-length 126
                 }
             }
@@ -83,7 +83,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:64::21 {
+                address 2001:db8:64::16 {
                     prefix-length 126
                 }
             }
