--- a/nokia-sr-mpls/configs/lab1-ipaddr/CSC2-P3.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/CSC2-P3.partial.cfg
@@ -67,7 +67,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:66::17 {
+                address 2001:db8:66::a {
                     prefix-length 126
                 }
             }
