--- a/nokia-sr-mpls/configs/lab1-ipaddr/NOC-R1.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/NOC-R1.partial.cfg
@@ -52,7 +52,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:noc:255:0:0:0:1 {
+                address 2001:db8:255:255::1 {
                     prefix-length 128
                 }
             }
@@ -67,7 +67,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::74 {
+                address 2001:db8:65::4A {
                     prefix-length 126
                 }
             }
@@ -83,7 +83,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:noc:1::1 {
+                address 2001:db8:255:1::1 {
                     prefix-length 64
                 }
             }
