--- a/nokia-sr-mpls/configs/lab1-ipaddr/NOC-R2.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/NOC-R2.partial.cfg
@@ -52,7 +52,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:noc:255:0:0:0:2 {
+                address 2001:db8:255:255::2 {
                     prefix-length 128
                 }
             }
@@ -67,7 +67,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::78 {
+                address 2001:db8:65::4E {
                     prefix-length 126
                 }
             }
@@ -83,7 +83,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:noc:2::1 {
+                address 2001:db8:255:2::1 {
                     prefix-length 64
                 }
             }
