--- a/nokia-sr-mpls/configs/lab1-ipaddr/P1.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/P1.partial.cfg
@@ -110,7 +110,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::11 {
+                address 2001:db8:65::a {
                     prefix-length 126
                 }
             }
@@ -126,7 +126,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::17 {
+                address 2001:db8:65::11 {
                     prefix-length 126
                 }
             }
@@ -158,7 +158,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::21 {
+                address 2001:db8:65::15 {
                     prefix-length 126
                 }
             }
