--- a/nokia-sr-mpls/configs/lab1-ipaddr/P3.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/P3.partial.cfg
@@ -76,7 +76,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::33 {
+                address 2001:db8:65::21 {
                     prefix-length 126
                 }
             }
@@ -92,7 +92,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::29 {
+                address 2001:db8:65::1D {
                     prefix-length 126
                 }
             }
@@ -108,7 +108,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::22 {
+                address 2001:db8:65::16 {
                     prefix-length 126
                 }
             }
