--- a/nokia-sr-mpls/configs/lab1-ipaddr/P4.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/P4.partial.cfg
@@ -76,7 +76,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::31 {
+                address 2001:db8:65::1F {
                     prefix-length 126
                 }
             }
@@ -92,7 +92,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::37 {
+                address 2001:db8:65::25 {
                     prefix-length 126
                 }
             }
@@ -108,7 +108,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::26 {
+                address 2001:db8:65::1A {
                     prefix-length 126
                 }
             }
