--- a/nokia-sr-mpls/configs/lab1-ipaddr/P5.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/P5.partial.cfg
@@ -76,7 +76,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::35 {
+                address 2001:db8:65::23 {
                     prefix-length 126
                 }
             }
@@ -92,7 +92,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::41 {
+                address 2001:db8:65::29 {
                     prefix-length 126
                 }
             }
@@ -108,7 +108,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::45 {
+                address 2001:db8:65::2D {
                     prefix-length 126
                 }
             }
