--- a/nokia-sr-mpls/configs/lab1-ipaddr/P6.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/P6.partial.cfg
@@ -76,7 +76,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::42 {
+                address 2001:db8:65::2A {
                     prefix-length 126
                 }
             }
@@ -92,7 +92,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::39 {
+                address 2001:db8:65::27 {
                     prefix-length 126
                 }
             }
@@ -108,7 +108,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::49 {
+                address 2001:db8:65::31 {
                     prefix-length 126
                 }
             }
