--- a/nokia-sr-mpls/configs/lab1-ipaddr/P7.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/P7.partial.cfg
@@ -94,7 +94,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::46 {
+                address 2001:db8:65::2E {
                     prefix-length 126
                 }
             }
@@ -110,7 +110,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::65 {
+                address 2001:db8:65::41 {
                     prefix-length 126
                 }
             }
@@ -126,7 +126,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::53 {
+                address 2001:db8:65::35 {
                     prefix-length 126
                 }
             }
@@ -142,7 +142,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::57 {
+                address 2001:db8:65::39 {
                     prefix-length 126
                 }
             }
