--- a/nokia-sr-mpls/configs/lab1-ipaddr/PE3.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/PE3.partial.cfg
@@ -84,7 +84,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::62 {
+                address 2001:db8:65::3E {
                     prefix-length 126
                 }
             }
@@ -100,7 +100,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::59 {
+                address 2001:db8:65::3B {
                     prefix-length 126
                 }
             }
