--- a/nokia-sr-mpls/configs/lab1-ipaddr/P8.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/P8.partial.cfg
@@ -94,7 +94,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::51 {
+                address 2001:db8:65::33 {
                     prefix-length 126
                 }
             }
@@ -110,7 +110,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::61 {
+                address 2001:db8:65::3D {
                     prefix-length 126
                 }
             }
@@ -126,7 +126,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::55 {
+                address 2001:db8:65::37 {
                     prefix-length 126
                 }
             }
@@ -142,7 +142,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::69 {
+                address 2001:db8:65::45 {
                     prefix-length 126
                 }
             }
