--- a/nokia-sr-mpls/configs/lab1-ipaddr/PE4.partial.cfg
+++ b/nokia-sr-mpls/configs/lab1-ipaddr/PE4.partial.cfg
@@ -93,7 +93,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::66 {
+                address 2001:db8:65::42 {
                     prefix-length 126
                 }
             }
@@ -109,7 +109,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::71 {
+                address 2001:db8:65::47 {
                     prefix-length 126
                 }
             }
@@ -125,7 +125,7 @@ configure {
                 }
             }
             ipv6 {
-                address 2001:db8:65::77 {
+                address 2001:db8:65::4D {
                     prefix-length 126
                 }
             }
