--- a/nokia-sr-mpls/not-a-clab-topology.yml
+++ b/nokia-sr-mpls/not-a-clab-topology.yml
@@ -128,7 +128,7 @@
         description: "To_PE2_1/1/c5/1"
         type: "routed"
         ipv4: "100.65.0.74/30"
-        ipv6: "2001:db8:65::74/126"
+        ipv6: "2001:db8:65::4A/126"
       - intf: "1/1/c2/1"
         neighbor: "Stub_interface"
         description: "To_Stub_interface"
@@ -149,7 +149,7 @@
         description: "To_PE4_1/1/c5/1"
         type: "routed"
         ipv4: "100.65.0.78/30"
-        ipv6: "2001:db8:65::78/126"
+        ipv6: "2001:db8:65::4E/126"
       - intf: "1/1/c2/1"
         neighbor: "Stub_interface"
         description: "To_Stub_interface"
@@ -181,7 +181,7 @@
         description: "To_P1_1/1/c3/1"
         type: "routed"
         ipv4: "100.65.0.1/30"
-        ipv6: "2001:db8:65::1/126"
+        ipv6: "2001:db8:65::a/126"
   - name: "PE2"
     type: "nokia_srsim"
     loopback: "100.65.255.12"
@@ -213,7 +213,7 @@
         description: "To_NOC-R1_1/1/c5/1"
         type: "routed"
         ipv4: "100.65.0.73/30"
-        ipv6: "2001:db8:65::73/126"
+        ipv6: "2001:db8:65::49/126"
   - name: "P1"
     type: "nokia_srsim"
     loopback: "100.65.255.1"
@@ -234,13 +234,13 @@
         description: "To_PE2_1/1/c2/1"
         type: "routed"
         ipv4: "100.65.0.10/30"
-        ipv6: "2001:db8:65::10/126"
+        ipv6: "2001:db8:65::a/126"
       - intf: "1/1/c4/1"
         neighbor: "P2_1/1/c4/1"
         description: "To_P2_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.17/30"
-        ipv6: "2001:db8:65::17/126"
+        ipv6: "2001:db8:65::11/126"
       - intf: "1/1/c6/1"
         neighbor: "CSC1-PE1_1/1/c6/1"
         description: "To_CSC1-PE1_1/1/c6/1"
@@ -252,7 +252,7 @@
         description: "To_P3_1/1/c5/1"
         type: "routed"
         ipv4: "100.65.0.21/30"
-        ipv6: "2001:db8:65::21/126"
+        ipv6: "2001:db8:65::15/126"
   - name: "P2"
     type: "nokia_srsim"
     loopback: "100.65.255.2"
@@ -279,13 +279,13 @@
         description: "To_P1_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.18/30"
-        ipv6: "2001:db8:65::18/126"
+        ipv6: "2001:db8:65::12/126"
       - intf: "1/1/c5/1"
         neighbor: "P4_1/1/c5/1"
         description: "To_P4_1/1/c5/1"
         type: "routed"
         ipv4: "100.65.0.25/30"
-        ipv6: "2001:db8:65::25/126"
+        ipv6: "2001:db8:65::19/126"
       - intf: "1/1/c6/1"
         neighbor: "CSC2-PE1_1/1/c6/1"
         description: "To_CSC2-PE1_1/1/c6/1"
@@ -306,19 +306,19 @@
         description: "To_P5_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.33/30"
-        ipv6: "2001:db8:65::33/126"
+        ipv6: "2001:db8:65::21/126"
       - intf: "1/1/c3/1"
         neighbor: "P4_1/1/c3/1"
         description: "To_P4_1/1/c3/1"
         type: "routed"
         ipv4: "100.65.0.29/30"
-        ipv6: "2001:db8:65::29/126"
+        ipv6: "2001:db8:65::1D/126"
       - intf: "1/1/c5/1"
         neighbor: "P1_1/1/c5/1"
         description: "To_P1_1/1/c5/1"
         type: "routed"
         ipv4: "100.65.0.22/30"
-        ipv6: "2001:db8:65::22/126"
+        ipv6: "2001:db8:65::16/126"
   - name: "P4"
     type: "nokia_srsim"
     loopback: "100.65.255.4"
@@ -333,19 +333,19 @@
         description: "To_P3_1/1/c3/1"
         type: "routed"
         ipv4: "100.65.0.30/30"
-        ipv6: "2001:db8:65::30/126"
+        ipv6: "2001:db8:65::1E/126"
       - intf: "1/1/c4/1"
         neighbor: "P6_1/1/c4/1"
         description: "To_P6_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.37/30"
-        ipv6: "2001:db8:65::37/126"
+        ipv6: "2001:db8:65::25/126"
       - intf: "1/1/c5/1"
         neighbor: "P2_1/1/c5/1"
         description: "To_P2_1/1/c5/1"
         type: "routed"
         ipv4: "100.65.0.26/30"
-        ipv6: "2001:db8:65::26/126"
+        ipv6: "2001:db8:65::1A/126"
   - name: "P5"
     type: "nokia_srsim"
     loopback: "100.65.255.5"
@@ -360,19 +360,19 @@
         description: "To_P3_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.34/30"
-        ipv6: "2001:db8:65::34/126"
+        ipv6: "2001:db8:65::22/126"
       - intf: "1/1/c3/1"
         neighbor: "P6_1/1/c3/1"
         description: "To_P6_1/1/c3/1"
         type: "routed"
         ipv4: "100.65.0.41/30"
-        ipv6: "2001:db8:65::41/126"
+        ipv6: "2001:db8:65::29/126"
       - intf: "1/1/c1/1"
         neighbor: "P7_1/1/c1/1"
         description: "To_P7_1/1/c1/1"
         type: "routed"
         ipv4: "100.65.0.45/30"
-        ipv6: "2001:db8:65::45/126"
+        ipv6: "2001:db8:65::2D/126"
   - name: "P6"
     type: "nokia_srsim"
     loopback: "100.65.255.6"
@@ -387,19 +387,19 @@
         description: "To_P5_1/1/c3/1"
         type: "routed"
         ipv4: "100.65.0.42/30"
-        ipv6: "2001:db8:65::42/126"
+        ipv6: "2001:db8:65::2A/126"
       - intf: "1/1/c4/1"
         neighbor: "P4_1/1/c4/1"
         description: "To_P4_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.38/30"
-        ipv6: "2001:db8:65::38/126"
+        ipv6: "2001:db8:65::26/126"
       - intf: "1/1/c1/1"
         neighbor: "P8_1/1/c1/1"
         description: "To_P8_1/1/c1/1"
         type: "routed"
         ipv4: "100.65.0.49/30"
-        ipv6: "2001:db8:65::49/126"
+        ipv6: "2001:db8:65::31/126"
   - name: "P7"
     type: "nokia_srsim"
     loopback: "100.65.255.7"
@@ -414,31 +414,31 @@
         description: "To_P5_1/1/c1/1"
         type: "routed"
         ipv4: "100.65.0.46/30"
-        ipv6: "2001:db8:65::46/126"
+        ipv6: "2001:db8:65::2E/126"
       - intf: "1/1/c2/1"
         neighbor: "PE4_1/1/c2/1"
         description: "To_PE4_1/1/c2/1"
         type: "routed"
         ipv4: "100.65.0.65/30"
-        ipv6: "2001:db8:65::65/126"
+        ipv6: "2001:db8:65::41/126"
       - intf: "1/1/c3/1"
         neighbor: "P8_1/1/c3/1"
         description: "To_P8_1/1/c3/1"
         type: "routed"
         ipv4: "100.65.0.53/30"
-        ipv6: "2001:db8:65::53/126"
+        ipv6: "2001:db8:65::35/126"
       - intf: "1/1/c4/1"
         neighbor: "PE3_1/1/c4/1"
         description: "To_PE3_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.57/30"
-        ipv6: "2001:db8:65::57/126"
+        ipv6: "2001:db8:65::39/126"
       - intf: "1/1/c6/1"
         neighbor: "CSC1-PE2_1/1/c6/1"
         description: "To_CSC1-PE2_1/1/c6/1"
         type: "routed"
         ipv4: "100.64.1.6/30"
-        ipv6: "2001:db8:64:65::6/126"
+        ipv6: "2001:db8:64:1::6/126"
   - name: "P8"
     type: "nokia_srsim"
     loopback: "100.65.255.8"
@@ -453,25 +453,25 @@
         description: "To_P6_1/1/c1/1"
         type: "routed"
         ipv4: "100.65.0.50/30"
-        ipv6: "2001:db8:65::50/126"
+        ipv6: "2001:db8:65::32/126"
       - intf: "1/1/c2/1"
         neighbor: "PE3_1/1/c2/1"
         description: "To_PE3_1/1/c2/1"
         type: "routed"
         ipv4: "100.65.0.61/30"
-        ipv6: "2001:db8:65::61/126"
+        ipv6: "2001:db8:65::3D/126"
       - intf: "1/1/c3/1"
         neighbor: "P7_1/1/c3/1"
         description: "To_P7_1/1/c3/1"
         type: "routed"
         ipv4: "100.65.0.54/30"
-        ipv6: "2001:db8:65::54/126"
+        ipv6: "2001:db8:65::36/126"
       - intf: "1/1/c4/1"
         neighbor: "PE4_1/1/c4/1"
         description: "To_PE4_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.69/30"
-        ipv6: "2001:db8:65::69/126"
+        ipv6: "2001:db8:65::45/126"
       - intf: "1/1/c6/1"
         neighbor: "CSC2-PE2_1/1/c6/1"
         description: "To_CSC2-PE2_1/1/c6/1"
@@ -497,13 +497,13 @@
         description: "To_P8_1/1/c2/1"
         type: "routed"
         ipv4: "100.65.0.62/30"
-        ipv6: "2001:db8:65::62/126"
+        ipv6: "2001:db8:65::3E/126"
       - intf: "1/1/c4/1"
         neighbor: "P7_1/1/c4/1"
         description: "To_P7_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.58/30"
-        ipv6: "2001:db8:65::58/126"
+        ipv6: "2001:db8:65::3A/126"
   - name: "PE4"
     type: "nokia_srsim"
     loopback: "100.65.255.14"
@@ -523,19 +523,19 @@
         description: "To_P7_1/1/c2/1"
         type: "routed"
         ipv4: "100.65.0.66/30"
-        ipv6: "2001:db8:65::66/126"
+        ipv6: "2001:db8:65::42/126"
       - intf: "1/1/c4/1"
         neighbor: "P8_1/1/c4/1"
         description: "To_P8_1/1/c4/1"
         type: "routed"
         ipv4: "100.65.0.70/30"
-        ipv6: "2001:db8:65::70/126"
+        ipv6: "2001:db8:65::46/126"
       - intf: "1/1/c5/1"
         neighbor: "NOC-R2_1/1/c5/1"
         description: "To_NOC-R2_1/1/c5/1"
         type: "routed"
         ipv4: "100.65.0.76/30"
-        ipv6: "2001:db8:65::76/126"
+        ipv6: "2001:db8:65::4C/126"
   - name: "CSC1-PE1"
     type: "nokia_srsim"
     loopback: "100.64.255.11"
@@ -589,13 +589,13 @@
         description: "To_CSC1-P3_1/1/c2/1"
         type: "routed"
         ipv4: "100.64.0.18/30"
-        ipv6: "2001:db8:64::18/126"
+        ipv6: "2001:db8:64::12/126"
       - intf: "1/1/c3/1"
         neighbor: "CSC1-P4_1/1/c3/1"
         description: "To_CSC1-P4_1/1/c3/1"
         type: "routed"
         ipv4: "100.64.0.22/30"
-        ipv6: "2001:db8:64::22/126"
+        ipv6: "2001:db8:64::16/126"
       - intf: "1/1/c6/1"
         neighbor: "P7_1/1/c6/1"
         description: "To_P7_1/1/c6/1"
@@ -658,13 +658,13 @@
         description: "To_CSC1-P1_1/1/c1/1"
         type: "routed"
         ipv4: "100.64.0.10/30"
-        ipv6: "2001:db8:64::10/126"
+        ipv6: "2001:db8:64::a/126"
       - intf: "1/1/c2/1"
         neighbor: "CSC1-PE2_1/1/c2/1"
         description: "To_CSC1-PE2_1/1/c2/1"
         type: "routed"
         ipv4: "100.64.0.17/30"
-        ipv6: "2001:db8:64::17/126"
+        ipv6: "2001:db8:64::11/126"
   - name: "CSC1-P4"
     type: "nokia_srsim"
     loopback: "100.64.255.4"
@@ -679,13 +679,13 @@
         description: "To_CSC1-P2_1/1/c1/1"
         type: "routed"
         ipv4: "100.64.0.14/30"
-        ipv6: "2001:db8:64::14/126"
+        ipv6: "2001:db8:64::e/126"
       - intf: "1/1/c2/1"
         neighbor: "CSC1-PE2_1/1/c3/1"
         description: "To_CSC1-PE2_1/1/c3/1"
         type: "routed"
         ipv4: "100.64.0.21/30"
-        ipv6: "2001:db8:64::21/126"
+        ipv6: "2001:db8:64::17/126"
   - name: "ISP1-R1"
     type: "nokia_srsim"
     loopback: "1.1.255.1/24"
@@ -767,13 +767,13 @@
         description: "To_CSC2-P3_1/1/c2/1"
         type: "routed"
         ipv4: "100.66.0.16/30"
-        ipv6: "2001:db8:66::16/126"
+        ipv6: "2001:db8:66::12/126"
       - intf: "1/1/c3/1"
         neighbor: "CSC2-P4_1/1/c3/1"
         description: "To_CSC2-P4_1/1/c3/1"
         type: "routed"
         ipv4: "100.66.0.22/30"
-        ipv6: "2001:db8:66::22/126"
+        ipv6: "2001:db8:66::16/126"
       - intf: "1/1/c6/1"
         neighbor: "P8_1/1/c6/1"
         description: "To_P8_1/1/c6/1"
@@ -836,13 +836,13 @@
         description: "To_CSC2-PE2_1/1/c2/1"
         type: "routed"
         ipv4: "100.66.0.17/30"
-        ipv6: "2001:db8:66::17/126"
+        ipv6: "2001:db8:66::11/126"
       - intf: "1/1/c1/1"
         neighbor: "CSC2-P1_1/1/c1/1"
         description: "To_CSC2-P1_1/1/c1/1"
         type: "routed"
         ipv4: "100.66.0.10/30"
-        ipv6: "2001:db8:66::10/126"
+        ipv6: "2001:db8:66::a/126"
   - name: "CSC2-P4"
     type: "nokia_srsim"
     loopback: "100.66.255.4"
@@ -857,10 +857,10 @@
         description: "To_CSC2-PE2_1/1/c3/1"
         type: "routed"
         ipv4: "100.66.0.21/30"
-        ipv6: "2001:db8:66::21/126"
+        ipv6: "2001:db8:66::17/126"
       - intf: "1/1/c1/1"
         neighbor: "CSC2-P2_1/1/c1/1"
         description: "To_CSC2-P2_1/1/c1/1"
         type: "routed"
         ipv4: "100.66.0.14/30"
-        ipv6: "2001:db8:66::14/126"
+        ipv6: "2001:db8:66::13/126"
