--- a/nokia-sr-mpls/not-a-clab-topology.yml
+++ b/nokia-sr-mpls/not-a-clab-topology.yml
@@ -1,4 +1,36 @@
 - devices:
+  - name: "ISP1-R1"
+    type: "nokia_srsim"
+    loopback: "1.1.255.1/24"
+    interfaces:
+      - intf: "loopback0"
+        description: "Loopback_interface"
+        type: "loopback"
+        ipv4: "1.1.255.1/24"
+        ipv6: "2001:db8:1:255::1/128"
+      - intf: "1/1/c1/1"
+        neighbor: "CSC1-PE1_1/1/c1/1"
+        description: "To_CSC1-PE1_1/1/c1/1"
+        type: "routed"
+        ipv4: "198.51.100.1/30"
+        ipv6: "2001:db8:1::1/126"
+
+  - name: "ISP2-R1"
+    type: "nokia_srsim"
+    loopback: "2.2.255.1/24"
+    interfaces:
+      - intf: "loopback0"
+        description: "Loopback_interface"
+        type: "loopback"
+        ipv4: "2.2.255.1/24"
+        ipv6: "2001:db8:2:255::1/128"
+      - intf: "1/1/c1/1"
+        neighbor: "CSC1-PE2_1/1/c1/1"
+        description: "To_CSC1-PE2_1/1/c1/1"
+        type: "routed"
+        ipv4: "203.0.113.1/30"
+        ipv6: "2001:db8:2::1/126"
+
   - name: "CPE-A1"
     type: "nokia_srsim"
     loopback: "172.16.255.1"
@@ -18,6 +50,7 @@
         type: "routed"
         ipv4: "172.16.1.1/30"
         ipv6: "2001:db8:a:1::1/126"
+
   - name: "CPE-A2"
     type: "nokia_srsim"
     loopback: "172.16.255.2"
@@ -37,6 +70,7 @@
         type: "routed"
         ipv4: "172.16.1.5/30"
         ipv6: "2001:db8:a:1::5/126"
+
   - name: "CPE-B1"
     type: "nokia_srsim"
     loopback: "172.17.255.1"
@@ -56,6 +90,7 @@
         type: "routed"
         ipv4: "172.17.0.1/30"
         ipv6: "2001:db8:b:1::1/126"
+
   - name: "CPE-B2"
     type: "nokia_srsim"
     loopback: "172.17.255.2"
@@ -75,6 +110,7 @@
         type: "routed"
         ipv4: "172.17.1.5/30"
         ipv6: "2001:db8:b:1::5/126"
+
   - name: "CPE-C1"
     type: "nokia_srsim"
     loopback: "172.18.255.1"
@@ -94,6 +130,7 @@
         type: "routed"
         ipv4: "172.18.0.1/30"
         ipv6: "2001:db8:c:1::1/126"
+
   - name: "CPE-C2"
     type: "nokia_srsim"
     loopback: "172.18.255.2"
@@ -135,6 +172,7 @@
         type: "routed"
         ipv4: "10.200.1.1/24"
         ipv6: "2001:db8:noc:1::1/64"
+
   - name: "NOC-R2"
     type: "nokia_srsim"
     loopback: "10.255.0.2"
@@ -156,6 +194,7 @@
         type: "routed"
         ipv4: "10.200.2.1/24"
         ipv6: "2001:db8:noc:2::1/64"
+
   - name: "PE1"
     type: "nokia_srsim"
     loopback: "100.65.255.11"
@@ -182,6 +221,18 @@
         type: "routed"
         ipv4: "100.65.0.1/30"
         ipv6: "2001:db8:65::a/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.11"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+
   - name: "PE2"
     type: "nokia_srsim"
     loopback: "100.65.255.12"
@@ -214,6 +265,18 @@
         type: "routed"
         ipv4: "100.65.0.73/30"
         ipv6: "2001:db8:65::49/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.12"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+
   - name: "P1"
     type: "nokia_srsim"
     loopback: "100.65.255.1"
@@ -253,6 +316,22 @@
         type: "routed"
         ipv4: "100.65.0.21/30"
         ipv6: "2001:db8:65::15/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.1"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c5/1"
+              network_type: "point-to-point"
+
   - name: "P2"
     type: "nokia_srsim"
     loopback: "100.65.255.2"
@@ -292,6 +371,22 @@
         type: "routed"
         ipv4: "100.66.1.2/30"
         ipv6: "2001:db8:66:1::2/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.2"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c5/1"
+              network_type: "point-to-point"
+
   - name: "P3"
     type: "nokia_srsim"
     loopback: "100.65.255.3"
@@ -319,6 +414,20 @@
         type: "routed"
         ipv4: "100.65.0.22/30"
         ipv6: "2001:db8:65::16/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.3"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c5/1"
+              network_type: "point-to-point"
+
   - name: "P4"
     type: "nokia_srsim"
     loopback: "100.65.255.4"
@@ -346,6 +455,20 @@
         type: "routed"
         ipv4: "100.65.0.26/30"
         ipv6: "2001:db8:65::1A/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.4"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c5/1"
+              network_type: "point-to-point"
+
   - name: "P5"
     type: "nokia_srsim"
     loopback: "100.65.255.5"
@@ -373,6 +496,20 @@
         type: "routed"
         ipv4: "100.65.0.45/30"
         ipv6: "2001:db8:65::2D/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.5"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"
+
   - name: "P6"
     type: "nokia_srsim"
     loopback: "100.65.255.6"
@@ -400,6 +537,20 @@
         type: "routed"
         ipv4: "100.65.0.49/30"
         ipv6: "2001:db8:65::31/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.6"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"
+
   - name: "P7"
     type: "nokia_srsim"
     loopback: "100.65.255.7"
@@ -439,6 +590,22 @@
         type: "routed"
         ipv4: "100.64.1.6/30"
         ipv6: "2001:db8:64:1::6/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.7"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"
+
   - name: "P8"
     type: "nokia_srsim"
     loopback: "100.65.255.8"
@@ -478,6 +645,21 @@
         type: "routed"
         ipv4: "100.66.1.6/30"
         ipv6: "2001:db8:66:1::6/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.8"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+
   - name: "PE3"
     type: "nokia_srsim"
     loopback: "100.65.255.13"
@@ -504,6 +686,18 @@
         type: "routed"
         ipv4: "100.65.0.58/30"
         ipv6: "2001:db8:65::3A/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.13"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"          
+
   - name: "PE4"
     type: "nokia_srsim"
     loopback: "100.65.255.14"
@@ -536,6 +730,18 @@
         type: "routed"
         ipv4: "100.65.0.76/30"
         ipv6: "2001:db8:65::4C/126"
+    ospf:
+      process_id: 1
+      router_id: "100.65.255.14"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c4/1"
+              network_type: "point-to-point"
+
   - name: "CSC1-PE1"
     type: "nokia_srsim"
     loopback: "100.64.255.11"
@@ -569,6 +775,18 @@
         type: "routed"
         ipv4: "100.64.1.1/30"
         ipv6: "2001:db8:64:1::1/126"
+    ospf:
+      process_id: 1
+      router_id: "100.64.255.11"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+
   - name: "CSC1-PE2"
     type: "nokia_srsim"
     loopback: "100.64.255.12"
@@ -602,6 +820,18 @@
         type: "routed"
         ipv4: "100.64.1.5/30"
         ipv6: "2001:db8:64:1::5/126"
+    ospf:
+      process_id: 1
+      router_id: "100.64.255.12"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+
   - name: "CSC1-P1"
     type: "nokia_srsim"
     loopback: "100.64.255.1"
@@ -623,6 +853,18 @@
         type: "routed"
         ipv4: "100.64.0.9/30"
         ipv6: "2001:db8:64::9/126"
+    ospf:
+      process_id: 1
+      router_id: "100.64.255.1"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+
   - name: "CSC1-P2"
     type: "nokia_srsim"
     loopback: "100.64.255.2"
@@ -644,6 +886,18 @@
         type: "routed"
         ipv4: "100.64.0.13/30"
         ipv6: "2001:db8:64::13/126"
+    ospf:
+      process_id: 1
+      router_id: "100.64.255.2"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+
   - name: "CSC1-P3"
     type: "nokia_srsim"
     loopback: "100.64.255.3"
@@ -665,6 +919,18 @@
         type: "routed"
         ipv4: "100.64.0.17/30"
         ipv6: "2001:db8:64::11/126"
+    ospf:
+      process_id: 1
+      router_id: "100.64.255.3"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+
   - name: "CSC1-P4"
     type: "nokia_srsim"
     loopback: "100.64.255.4"
@@ -686,36 +952,18 @@
         type: "routed"
         ipv4: "100.64.0.21/30"
         ipv6: "2001:db8:64::17/126"
-  - name: "ISP1-R1"
-    type: "nokia_srsim"
-    loopback: "1.1.255.1/24"
-    interfaces:
-      - intf: "loopback0"
-        description: "Loopback_interface"
-        type: "loopback"
-        ipv4: "1.1.255.1/24"
-        ipv6: "2001:db8:1:255::1/128"
-      - intf: "1/1/c1/1"
-        neighbor: "CSC1-PE1_1/1/c1/1"
-        description: "To_CSC1-PE1_1/1/c1/1"
-        type: "routed"
-        ipv4: "198.51.100.1/30"
-        ipv6: "2001:db8:1::1/126"
-  - name: "ISP2-R1"
-    type: "nokia_srsim"
-    loopback: "2.2.255.1/24"
-    interfaces:
-      - intf: "loopback0"
-        description: "Loopback_interface"
-        type: "loopback"
-        ipv4: "2.2.255.1/24"
-        ipv6: "2001:db8:2:255::1/128"
-      - intf: "1/1/c1/1"
-        neighbor: "CSC1-PE2_1/1/c1/1"
-        description: "To_CSC1-PE2_1/1/c1/1"
-        type: "routed"
-        ipv4: "203.0.113.1/30"
-        ipv6: "2001:db8:2::1/126"
+    ospf:
+      process_id: 1
+      router_id: "100.64.255.4"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+
   - name: "CSC2-PE1"
     type: "nokia_srsim"
     loopback: "100.66.255.11/32"
@@ -748,6 +996,18 @@
         type: "routed"
         ipv4: "100.66.1.1/30"
         ipv6: "2001:db8:66:1::1/126"
+    ospf:
+      process_id: 1
+      router_id: "100.66.255.11"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "system"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+
   - name: "CSC2-PE2"
     type: "nokia_srsim"
     loopback: "100.66.255.12"
@@ -780,6 +1040,17 @@
         type: "routed"
         ipv4: "100.66.1.5/30"
         ipv6: "2001:db8:66:1::5/126"
+    ospf:
+      process_id: 1
+      router_id: "100.66.255.12"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+
   - name: "CSC2-P1"
     type: "nokia_srsim"
     loopback: "100.66.255.1"
@@ -801,6 +1072,17 @@
         type: "routed"
         ipv4: "100.66.0.9/30"
         ipv6: "2001:db8:66::9/126"
+    ospf:
+      process_id: 1
+      router_id: "100.66.255.11"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+
   - name: "CSC2-P2"
     type: "nokia_srsim"
     loopback: "100.66.255.2"
@@ -822,6 +1104,17 @@
         type: "routed"
         ipv4: "100.66.0.12/30"
         ipv6: "2001:db8:66::12/126"
+    ospf:
+      process_id: 1
+      router_id: "100.66.255.2"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+
   - name: "CSC2-P3"
     type: "nokia_srsim"
     loopback: "100.66.255.3"
@@ -843,6 +1136,17 @@
         type: "routed"
         ipv4: "100.66.0.10/30"
         ipv6: "2001:db8:66::a/126"
+    ospf:
+      process_id: 1
+      router_id: "100.66.255.3"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "1/1/c2/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
+
   - name: "CSC2-P4"
     type: "nokia_srsim"
     loopback: "100.66.255.4"
@@ -864,3 +1168,13 @@
         type: "routed"
         ipv4: "100.66.0.14/30"
         ipv6: "2001:db8:66::13/126"
+    ospf:
+      process_id: 1
+      router_id: "100.66.255.4"
+      areas:
+        - area_id: "0.0.0.0"
+          interfaces:
+            - intf: "1/1/c3/1"
+              network_type: "point-to-point"
+            - intf: "1/1/c1/1"
+              network_type: "point-to-point"
